# sprint_9_ugc

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
action_api/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
action_api/libs/actions/: __init__.py
action_api/libs/actions/handlers/: __init__.py  bookmarks.py  likes.py  reviews.py
action_api/libs/actions/handlers/schemas/: __init__.py  bookmark.py  like.py  review.py
action_api/libs/actions/models/: __init__.py  bookmark.py  like.py  mixins.py  review.py  token.py
action_api/libs/actions/repositories/: __init__.py  mongo.py
action_api/libs/actions/repositories/models/: __init__.py  base.py
action_api/libs/actions/services/: __init__.py  base.py  bookmark.py  like.py  review.py  token.py
action_api/libs/actions/services/models/: __init__.py  bookmark.py  like.py  paginate.py  review.py
action_api/libs/actions/utils/: __init__.py  errors.py  item_type.py  object_id.py
action_api/libs/app/: __init__.py  app.py  config.py  logger.py
action_api/libs/app/settings/: __init__.py  auth.py  mongo.py  project.py
action_api/libs/clients/: __init__.py  mongo.py
action_api/nginx/: nginx.conf  site.conf
action_api/tests/: .env.example  config.py
action_api/tests/functional/fixtures/: __init__.py  http_client.py
action_api/tests/functional/models/: __init__.py  base.py
action_api/tests/functional/src/bookmarks/: test_add.py  test_delete.py  test_get.py
action_api/tests/functional/src/likes/: test_add.py  test_delete.py  test_get.py
action_api/tests/functional/src/reviews/: test_add.py  test_delete.py  test_get.py
action_api/tests/functional/testdata/: __init__.py
action_api/tests/functional/testdata/bookmark/: __init__.py  add_data.py  delete_data.py  get_data.py
action_api/tests/functional/testdata/like/: __init__.py  add_data.py  delete_data.py  get_data.py
action_api/tests/functional/testdata/review/: __init__.py  add_data.py  delete_data.py  get_data.py
action_api/tests/functional/utils/: __init__.py  tokens.py
benchmark/: .env.example  README.md  docker-compose.elastic.yml  docker-compose.mongo.yml  pyproject.toml
benchmark/core/: config.py
benchmark/data_management/: base_data.py  clickstream_chunk_generator.py  db_research.py  shema_design.json
benchmark/data_management/clients/: base_client.py  elastic.py  mongodb.py
benchmark/results/Elasticsearch/: README.md
benchmark/results/MongoDB/: README.md
benchmark/shemas/: entity.py
elk/: .env.example  .gitignore  README.md  docker-compose.yml
elk/config/: logstash.conf
elk/src/app/: app.py  requirements.txt  uwsgi.ini
elk/src/deploy/: Dockerfile  filebeat.yml
elk/src/deploy/etc/nginx/: nginx.conf
elk/src/deploy/etc/nginx/conf.d/: app.conf
